Adding support for ISO format
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2994 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -139,8 +139,8 @@ GML.print						= Drucken
 GML.priority 						= Priorit&auml;t
 GML.privateFS 						= Private
 GML.privateMS 						= Privater
-GML.publication						= Ver\u00F6ffentlichung
-GML.publications					= Ver\u00F6ffentlichungen
+GML.publication						= Ver\u00f6ffentlichung
+GML.publications					= Ver\u00f6ffentlichungen
 GML.publish						= Ver&ouml;ffentlichen
 
 GML.restore						= Wiederherstellen
@@ -201,13 +201,13 @@ GML.jour6 = Freitag
 GML.jour7 = Samstag
 GML.jour1 = Sonntag
 
-GML.shortJour2 = M
-GML.shortJour3 = D
-GML.shortJour4 = M
-GML.shortJour5 = D
-GML.shortJour6 = F
-GML.shortJour7 = S
-GML.shortJour1 = S
+GML.shortJour2 = Mon
+GML.shortJour3 = Die
+GML.shortJour4 = Mit
+GML.shortJour5 = Don
+GML.shortJour6 = Fre
+GML.shortJour7 = Sam
+GML.shortJour1 = Son
 
 GML.mois0 = Januar
 GML.mois1 = Februar
@@ -222,7 +222,7 @@ GML.mois9 = Oktober
 GML.mois10 = November
 GML.mois11 = Dezember
 
-//Contr\u00F4le JavaScript
+//Contr\u00f4le JavaScript
 GML.ThisFormContains = Dieses Fomular enth&auml;lt
 GML.MustBeFilled = muss ausgef&uuml;llt werden
 GML.MustContainsNumber = muss eine Ganzzahl enthalten
@@ -241,7 +241,7 @@ GML.PDCParam = Die Verwendung der PDC parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
 GML.PDCDeletePosition = Die gew&auml;hlten Positionen l&ouml;schen
 
-//Contr\u00F4les d'acc\u00E8s
+//Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Sie verf&uuml;gen nicht &uuml;ber gen&uuml;gende Rechte, um zur gew&uuml;nschten Information Zugang zu erhalten!
 GML.DocumentNotFound = Die Information, die Sie abfragen m&ouml;chten, existiert nicht mehr!
 
@@ -264,7 +264,7 @@ GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiter
 //Export CSV
 GML.ExportSucceeded = Export erfolgreich.
 GML.ExportFailed = Der Export ist fehlgeschlagen.
-GML.ExportInProgress = Export l\u00E4uft ...
+GML.ExportInProgress = Export l\u00e4uft ...
 GML.ExportCSV = Export CSV
 
 GML.DragNDropExpand = Um eine Datei schnell abzulegen...
