--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -199,13 +199,13 @@ GML.jour6 = Friday
 GML.jour7 = Saturday
 GML.jour1 = Sunday
 
-GML.shortJour2 = M
-GML.shortJour3 = T
-GML.shortJour4 = W
-GML.shortJour5 = T
-GML.shortJour6 = F
-GML.shortJour7 = S
-GML.shortJour1 = S
+GML.shortJour2 = Mon
+GML.shortJour3 = Tue
+GML.shortJour4 = Wed
+GML.shortJour5 = Thu
+GML.shortJour6 = Fri
+GML.shortJour7 = Sat
+GML.shortJour1 = Sun
 
 GML.mois0 = January
 GML.mois1 = February
