--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -35,7 +35,7 @@ GML.allMP						= Tous
 GML.allFP						= Toutes
 GML.agenda 						= Agenda
 GML.attachments 					= Fichiers joints
-GML.noLockedFile           = Aucun fichier r\u00E9serv\u00E9 !
+GML.noLockedFile           = Aucun fichier r\u00e9serv\u00e9 !
 GML.author						= Auteur
 GML.publisher						= Publieur
 GML.affichierCalendrie  = Afficher le calendrier
@@ -46,21 +46,21 @@ GML.import						= Importer
 GML.back						= Retour
 
 GML.cancel						= Annuler
-GML.categories 						= Cat\u00E9gories
-GML.category	 					= Cat\u00E9gorie
-GML.cellularPhoneNumber 	                        = T\u00E9l. mobile
+GML.categories 						= Cat\u00e9gories
+GML.category	 					= Cat\u00e9gorie
+GML.cellularPhoneNumber 	                        = T\u00e9l. mobile
 GML.close						= Fermer
-GML.company 						= Soci\u00E9t\u00E9
+GML.company 						= Soci\u00e9t\u00e9
 GML.component                                           = KM Service
 GML.copy 						= Copier
-GML.create						= Cr\u00E9er
-GML.createPublication			                = Cr\u00E9er une publication
-GML.createTheme						= Cr\u00E9er un th\u00E8me
+GML.create						= Cr\u00e9er
+GML.createPublication			                = Cr\u00e9er une publication
+GML.createTheme						= Cr\u00e9er un th\u00e8me
 GML.cut							= Couper
-GML.generatePDF						= G\u00E9n\u00E9rer un PDF
+GML.generatePDF						= G\u00e9n\u00e9rer un PDF
 
 GML.date						= Date
-GML.dateBegin 						= Date de d\u00E9but
+GML.dateBegin 						= Date de d\u00e9but
 GML.dateEnd 						= Date de fin
 GML.day							= Jour
 GML.delete						= Supprimer
@@ -70,7 +70,7 @@ GML.detail						= D&eacute;tail
 GML.domain						= Espace
 GML.domainManager				= Gestionnaire de domaine
 GML.domains						= Espaces
-GML.download						= T\u00E9l\u00E9chargement
+GML.download						= T\u00e9l\u00e9chargement
 
 GML.eMail 						= E-mail
 GML.empty                                               = Vide
@@ -80,21 +80,21 @@ GML.errors						= Erreurs
 
 GML.faxNumber 						= Fax
 GML.file						= Fichier
-GML.firstName                                           = Pr\u00E9nom
+GML.firstName                                           = Pr\u00e9nom
 
 GML.groupe						= Groupe
 GML.groupes						= Groupes
 GML.guest						= Invit\u00E9
 
-GML.head						= Ent\u00EAte
+GML.head						= Ent\u00eate
 GML.help						= Aide
-GML.homePhoneNumber 			                = T\u00E9l. domicile
+GML.homePhoneNumber 			                = T\u00e9l. domicile
 
-GML.insertHere						= Ins\u00E9rer ici
+GML.insertHere						= Ins\u00e9rer ici
 
 GML.jobPeas						= Service
 
-GML.keyWords						= Mots cl\u00E9s
+GML.keyWords						= Mots cl\u00e9s
 GML.kmmanager                   = Gestionnaire du Plan de Classement
 
 GML.label						= Libell&eacute;
@@ -132,15 +132,15 @@ GML.order					        = Ordre
 GML.password 						= Mot de passe
 GML.paste						= Coller
 GML.path						= Emplacement
-GML.phoneNumber 					= T\u00E9l\u00E9phone
+GML.phoneNumber 					= T\u00e9l\u00e9phone
 GML.position 						= Poste
 GML.public 						= Publique
-GML.preview						= Pr\u00E9visualisation
-GML.previous						= Pr\u00E9c\u00E9dent
+GML.preview						= Pr\u00e9visualisation
+GML.previous						= Pr\u00e9c\u00e9dent
 GML.print						= Imprimer
-GML.priority 						= Priorit\u00E9
-GML.privateFS 						= Priv\u00E9e
-GML.privateMS 						= Priv\u00E9
+GML.priority 						= Priorit\u00e9
+GML.privateFS 						= Priv\u00e9e
+GML.privateMS 						= Priv\u00e9
 GML.publication						= Publication
 GML.publications					= Publications
 GML.publish						= Publier
@@ -153,19 +153,19 @@ GML.size						= Taille
 GML.space						= Espace
 GML.status						= Etat
 GML.subscription					= Abonnement
-GML.shrink						= R\u00E9duire
-GML.surname						= Pr\u00E9nom
-GML.selection						= S\u00E9lection
-GML.select						= S\u00E9lectionnez...
+GML.shrink						= R\u00e9duire
+GML.surname						= Pr\u00e9nom
+GML.selection						= S\u00e9lection
+GML.select						= S\u00e9lectionnez...
 
-GML.toSelect						= S\u00E9lectionner
+GML.toSelect						= S\u00e9lectionner
 GML.theField						= le champ
-GML.theme						= Th\u00E8me
+GML.theme						= Th\u00e8me
 GML.title						= Titre
 GML.type						= Type
 
 GML.unlock					        = D&eacute;v&eacute;rouiller
-GML.upload						= T\u00E9l\u00E9chargement
+GML.upload						= T\u00e9l\u00e9chargement
 GML.user						= Utilisateur
 GML.users						= Utilisateurs
 
@@ -174,13 +174,13 @@ GML.viewCalendar					= Afficher le calendrier
 GML.calendar = Calendrier
 GML.week						= Semaine
 
-GML.year 						= Ann\u00E9e
+GML.year 						= Ann\u00e9e
 GML.yes						        = Oui
 
-// Titre fen\u00EAtre
+// Titre fen\u00eatre
 GML.popupTitle						= ___/ Silverpeas&#8482; - Collaborative Portal Organizer \\_________________________________________
 
-GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits r\u00E9serv\u00E9s
+GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits r\u00e9serv\u00e9s
 
 // Formulaire
 GML.thefield						= Le champ
@@ -204,52 +204,52 @@ GML.jour6 = Vendredi
 GML.jour7 = Samedi
 GML.jour1 = Dimanche
 
-GML.shortJour2 = L
-GML.shortJour3 = M
-GML.shortJour4 = M
-GML.shortJour5 = J
-GML.shortJour6 = V
-GML.shortJour7 = S
-GML.shortJour1 = D
+GML.shortJour2 = Lun
+GML.shortJour3 = Mar
+GML.shortJour4 = Mer
+GML.shortJour5 = Jeu
+GML.shortJour6 = Ven
+GML.shortJour7 = Sam
+GML.shortJour1 = Dim
 
 GML.mois0 = Janvier
-GML.mois1 = F\u00E9vrier
+GML.mois1 = F\u00e9vrier
 GML.mois2 = Mars
 GML.mois3 = Avril
 GML.mois4 = Mai
 GML.mois5 = Juin
 GML.mois6 = Juillet
-GML.mois7 = Ao\u00FBt
+GML.mois7 = Ao\u00fbt
 GML.mois8 = Septembre
 GML.mois9 = Octobre
 GML.mois10 = Novembre
-GML.mois11 = D\u00E9cembre
+GML.mois11 = D\u00e9cembre
 
-//Contr\u00F4le JavaScript
+//Contr\u00f4le JavaScript
 GML.ThisFormContains = Ce formulaire contient
-GML.MustBeFilled = doit \u00EAtre renseign\u00E9
+GML.MustBeFilled = doit \u00eatre renseign\u00e9
 GML.MustContainsNumber = doit contenir un entier
 GML.MustContainsFloat = doit contenir un nombre
 GML.MustContainsCorrectDate = doit contenir une date
-GML.MustContainsPostDateTo = doit contenir une date post\u00E9rieure \u00E0
-GML.MustContainsPostOrEqualDateTo = doit contenir une date post\u00E9rieure ou \u00E9gale \u00E0
-GML.MustContainsPostDate = doit contenir une date post\u00E9rieure \u00E0 aujourd'hui
+GML.MustContainsPostDateTo = doit contenir une date post\u00e9rieure \u00e0
+GML.MustContainsPostOrEqualDateTo = doit contenir une date post\u00e9rieure ou \u00e9gale \u00e0
+GML.MustContainsPostDate = doit contenir une date post\u00e9rieure \u00e0 aujourd'hui
 GML.MustContainsDateBetween1 = doit contenir une date entre le
 GML.MustContainsDateBetween2 = et le
 GML.MustContainsCorrectHour = doit contenir une heure correcte
 
 //Plan de classement
 GML.PDC = Plan de Classement
-GML.PDCParam = Param\u00E9trer l'utilisation du PDC
-GML.PDCNewPosition = Cr\u00E9er une nouvelle position
-GML.PDCDeletePosition = Supprimer la ou les positions s\u00E9lectionn\u00E9e(s)
+GML.PDCParam = Param\u00e9trer l'utilisation du PDC
+GML.PDCNewPosition = Cr\u00e9er une nouvelle position
+GML.PDCDeletePosition = Supprimer la ou les positions s\u00e9lectionn\u00e9e(s)
 
-//Contr\u00F4les d'acc\u00E8s
-GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00E9der \u00E0 l'information d\u00E9sir\u00E9e !
+//Contr\u00f4les d'acc\u00e8s
+GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00e9der \u00e0 l'information d\u00e9sir\u00e9e !
 GML.DocumentNotFound = L'information que vous souhaitez consulter n'existe plus !
 
-GML.creationDate = Cr\u00E9\u00E9 le
-GML.updateDate = Modifi\u00E9 le
+GML.creationDate = Cr\u00e9\u00e9 le
+GML.updateDate = Modifi\u00e9 le
 
 GML.language = Langue
 GML.translationRemove = Supprimer cette traduction
@@ -260,21 +260,21 @@ GML.ligne = - Ligne
 GML.colonne = Colonne
 GML.valeur = Valeur
 GML.obligatoire = Ce champ est obligatoire
-GML.nbCarMax = La valeur ne doit pas d\u00E9passer
+GML.nbCarMax = La valeur ne doit pas d\u00e9passer
 GML.nbCarMin = La valeur doit comporter au moins
-GML.caracteres = caract\u00E8res
+GML.caracteres = caract\u00e8res
 GML.errorCsvFile = Erreur, on ne peut uploader que des fichiers d'extension .csv
 //Export CSV
-GML.ExportSucceeded = Export r\u00E9ussi.
-GML.ExportFailed = L'export a \u00E9chou\u00E9.
+GML.ExportSucceeded = Export r\u00e9ussi.
+GML.ExportFailed = L'export a \u00e9chou\u00e9.
 GML.ExportInProgress = Export en cours...
 GML.ExportCSV = Exporter en CSV
 
-GML.DragNDropExpand = Pour d\u00E9poser rapidement un fichier...
+GML.DragNDropExpand = Pour d\u00e9poser rapidement un fichier...
 GML.DragNDropCollapse = Fermer
 
 GML.personalSpace = Espace personnel
-GML.linkTo = R\u00E9f\u00E9rencer
+GML.linkTo = R\u00e9f\u00e9rencer
 
 GML.or = ou
 GML.galleries = Phototh\u00E8ques
