closing feature #1440 Now, directory search uses Lucene's plain text search.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3055 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
@@ -66,7 +66,7 @@ JDP.synchroRuleInfo = <table><tr><td nowrap valign=top><b>DS_AccessLevel = *</b>
 JDP.properties = Properties de param\u00E9trage
 
 JDP.serverAuthentification = Properties d'authentification
-JDP.serverTimeStamp = Dernier indice LDAP synchronis\u00E9 (uSNChanged)
+JDP.serverTimeStamp = Dernier indice LDAP synchronis\u00E9
 JDP.silverPassword = Mot de passe Silverpeas
 JDP.synchroEnCours = Synchronisation du domaine en cours...
 
