--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -66,7 +66,7 @@ JDP.synchroRuleInfo = <table><tr><td valign=top nowrap><b>DS_AccessLevel = *</b>
 JDP.properties = Properties settings
 
 JDP.serverAuthentification = Authentification Properties
-JDP.serverTimeStamp = Last LDAP index synchronized (uSNChanged)
+JDP.serverTimeStamp = Last LDAP index synchronized
 JDP.silverPassword = Silverpeas password
 JDP.synchroEnCours = Synchronising the domain...
 
