update feature #407, #408, #409, #410 Merge statistics features from core-5.2-SPEC-1-SNAPSHOT branche
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3162 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
@@ -93,10 +93,19 @@ silverStatisticsPeas.In	 	 	 	 = in
 silverStatisticsPeas.Display	 	 	 = Anzeige
 silverStatisticsPeas.Volumes	 	 	 = Volumen
 
+silverStatisticsPeas.exportOptions	= Formatexport
+silverStatisticsPeas.export.option.csv=CSV
 
+silverStatisticsPeas.access.space = Spaces access
+silverStatisticsPeas.access.pdc = Axis access
 
+silverStatisticsPeas.pdc.axis= Axis statistics
+silverStatisticsPeas.pdc.cross= Cross axis statistics
 
-
-
-
-
+silverStatisticsPeas.pdc.th.axis= Axis
+silverStatisticsPeas.pdc.th.access= Access number
+silverStatisticsPeas.pdc.cross.axis.first=First axis
+silverStatisticsPeas.pdc.cross.axis.second=Second axis
+silverStatisticsPeas.pdc.cross.select=Select axis
+silverStatisticsPeas.pdc.error.select=Pleas select two axes
+silverStatisticsPeas.pdc.error.same=You must not select the same axis.
