--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
@@ -35,3 +35,6 @@ GEF.progressMessage.message1 = Application being processed
 GEF.progressMessage.message2 = Please wait...
 
 GEF.operations.label = What do you do?
+
+GEF.export.label = Export option
+GEF.export.option.csv=CSV
