--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
@@ -90,3 +90,20 @@ silverStatisticsPeas.Times	 	 	 = times
 silverStatisticsPeas.In	 	 	 	 = in
 silverStatisticsPeas.Display	 	 	 = Display
 silverStatisticsPeas.Volumes	 	 	 = Volumes
+
+silverStatisticsPeas.exportOptions	= Export option
+silverStatisticsPeas.export.option.csv=CSV
+
+silverStatisticsPeas.access.space = Spaces access
+silverStatisticsPeas.access.pdc = Axis access
+
+silverStatisticsPeas.pdc.axis= Axis statistics
+silverStatisticsPeas.pdc.cross= Cross axis statistics
+
+silverStatisticsPeas.pdc.th.axis= Axis
+silverStatisticsPeas.pdc.th.access= Access number
+silverStatisticsPeas.pdc.cross.axis.first=First axis
+silverStatisticsPeas.pdc.cross.axis.second=Second axis
+silverStatisticsPeas.pdc.cross.select=Select axis
+silverStatisticsPeas.pdc.error.select=Pleas select two axes
+silverStatisticsPeas.pdc.error.same=You must not select the same axis.
