fixing bug #1443 In case of anonymous user, connection settings are no longer saved.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3222 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/external/webConnections/multilang/webConnectionsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/webConnections/multilang/webConnectionsBundle_en.properties
@@ -30,3 +30,5 @@ webConnections.updateConnection = Update your connection
 webConnections.deleteConnection = Delete your connection
 webconnections.mandatory = Mandatory
 webConnections.connections = My connections
+
+webConnections.parametersWillNotBeStored = As a non-identified user (anonymous), your connection settings will not be saved.
