--- a/config-core/src/main/config/properties/com/silverpeas/external/webConnections/multilang/webConnectionsBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/webConnections/multilang/webConnectionsBundle_fr.properties
@@ -30,3 +30,5 @@ webConnections.updateConnection = Mettre \u00E0 jour votre connexion
 webConnections.deleteConnection = Supprimer votre connexion
 webconnections.mandatory = Obligatoire
 webConnections.connections = Mes connexions
+
+webConnections.parametersWillNotBeStored = En tant qu'utilisateur non identifi\u00e9 (anonyme), vos param\u00e8tres de connexion ne seront pas enregistr\u00e9s.
