fixing bug #1351 Now, space allows absolute and relative URLs.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3248 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -169,3 +169,5 @@ JSPP.WallPaper = Bandeau
 
 JSPP.inProgress = Traitement en cours !<br/>Veuillez patienter...
 JSPP.parameters = Paramètres
+
+JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas préciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
