--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -157,3 +157,5 @@ JSPP.SpaceAppearance = Aussehen
 JSPP.SpaceLook = Thema
 JSPP.WallPaper = Bandbild
 JSPP.parameters = Parameter
+
+JSPP.SpaceHomepage.URL.help = Several values are possible for the <b>URL</b> field : <ul><li>Absolute address. Example : http://www.google.com</li><li>Internal address. Example : /admin/jsp/page.jsp (do not specify the web context /silverpeas)</li><li>Internal address into another web application. Example : <b>$</b>/weblib/pages/page.jsp (start with $/<web_application_name>)</li></ul>
