--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
@@ -21,47 +21,11 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-
-add = Hinzuf\u00FCgen
-author = Herausgeber
-c_comment = Kommentar
-created = Erstellt
-modified = Ge\u00E4ndert
-modify = \u00C4ndern
-delete = L\u00F6schen
-suppressionConfirmation = Sind Sie sicher, folgendes l\u00F6schen zu wollen:
-type = Typ
-name = Name
-version = Version
-date = Datum
-status = Status
-creator = Ersteller
-description = Beschreibung
-comments = Kommentare
-comment = Kommentar
-lockedBy = Gesperrt durch
-free = Frei
-ok = OK
-cancel = Abbrechen
-alt = Gesperrt durch
-checkIn = Check-in
-checkOut = Check-out
-addNewVersion = Erstellen einer neuen Version
-newDocumentVersion = Neue Version des Dokumentes
-new_document = Neues Dokument
-browse = Browsen
-typeOfVersion = Typ der Version
-public = \u00D6ffentlich
-archive = Archiv
-required = obligatorisch
-document = Dokument
-nomVide = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
-pleaseFill = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
-pleaseFill_single = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen.
-
-// erreurs
-erreur = Fehler
-champsTropLong = Der Kommentar ist auf 2000 Zeichen begrenzt
+comment.add = Hinzuf\u00FCgen
+comment.suppressionConfirmation = Sind Sie sicher, folgendes l\u00F6schen zu wollen kommentar ?
+comment.comment = Kommentar
+comment.pleaseFill_single = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen.
+comment.champsTropLong = Der Kommentar ist auf 2000 Zeichen begrenzt
 
 comment.DAO_NoClosedStatment = Das " Statement " kann nicht geschlossen werden
 comment.EJB_NoClosedConnection = Die Verbindung zur Datenbank kann nicht geschlossen werden
