--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_fr.properties
@@ -21,46 +21,11 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-add = Ajouter
-author = Publieur
-c_comment = Commentaire
-created = Créé
-modified = Modifié
-modify = Modifier
-delete = Supprimer
-suppressionConfirmation = Etes vous sûr de vouloir supprimer le
-type = Type
-name = Nom
-version = Version
-date = Date
-status = Etat
-creator = Créateur
-description = Description
-comments = Commentaires
-comment = commentaire
-lockedBy = Verrouillé par 
-free = Libre
-ok = Valider
-cancel = Annuler
-alt = Verrouillé par
-checkIn = Check In
-checkOut = Check Out
-addNewVersion = Créer une nouvelle version
-newDocumentVersion = Nouvelle version du document
-new_document = Nouveau document
-browse = Parcourir
-typeOfVersion = Type de la version
-public = Public
-archive = Archive
-required = obligatoire
-document = Document
-nomVide = Vous devez remplir tous les champs obligatoires
-pleaseFill = Vous devez remplir tous les champs obligatoires
-pleaseFill_single = Vous devez remplir tous les champs obligatoires.
-
-// erreurs
-erreur = Erreur
-champsTropLong = Le commentaire est limité à 2000 caractères
+comment.add = Ajouter un commentaire
+comment.suppressionConfirmation = Etes vous sûr(e) de vouloir supprimer le commentaire ?
+comment.comment = Commentaire
+comment.pleaseFill_single = Vous devez remplir tous les champs obligatoires.
+comment.champsTropLong = Le commentaire est limité à 2000 caractères
 
 comment.DAO_NoClosedStatment = Impossible to close the " Statement "
 comment.EJB_NoClosedConnection = Impossible to close the connection to data base
