Multilang was incorrectly used into directory.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3378 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_en.properties
@@ -6,10 +6,10 @@ U=GML.user
 G=GML.guest
 
 #notificationUser
-notificationUser.title=New message to 
-notificationUser.object=Object
-notificationUser.message=Message
-notificationUser.sendMessage = Send a message
+notification.title=New message to 
+notification.object=Object
+notification.message=Message
+notification.sendMessage = Send a message
 
 #Index
 directory.scope.all = All
