--- a/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
@@ -58,6 +58,7 @@ form.EX_CANT_PARSE_DATE = Impossible to read Date field
 form.EX_CANT_CLOSE_FILE = Impossible to close the file
 form.EX_CANT_OPEN_FILE = Impossible to open the file
 form.EX_CANT_READ_FILE = Impossible to read the file
+form.EX_CANT_READ_VALUE = Impossible to read the value
 
 form.EX_ERR_CASTOR_LOAD_XML_MAPPING = Castor failed to load the XML file.
 form.EX_ERR_CASTOR_UNMARSHALL_PUBLICATION_TEMPLATE = Castor failed to unmarshal the XML file.
