--- a/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
@@ -58,6 +58,7 @@ form.EX_CANT_PARSE_DATE = Impossible de lire le champ de type Date
 form.EX_CANT_CLOSE_FILE = Impossible de fermer le fichier
 form.EX_CANT_OPEN_FILE = Impossible d'ouvrir le fichier
 form.EX_CANT_READ_FILE = Impossible de lire le fichier
+form.EX_CANT_READ_VALUE = Impossible de lire la valeur
 
 form.EX_ERR_CASTOR_LOAD_XML_MAPPING = Echec de Castor lors du chargement du fichier XML.
 form.EX_ERR_CASTOR_UNMARSHALL_PUBLICATION_TEMPLATE = Echec de Castor lors du tri du fichier XML.
