second integration step of feature #1493 Relationship management is done...

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -101,3 +101,23 @@ myProfile.settings.Thesaurus = Enable thesaurus
 myProfile.settings.DragDrop = Enable drag n' drop
 myProfile.settings.WebdavEditing = Enable online edition
 myProfile.settings.ChangeLookAlert = The selected look will only be applied to spaces with no set look
+
+myProfile.tab.profile = My profile
+myProfile.tab.settings = My settings
+myProfile.tab.invitations = My invitations
+
+myProfile.invitations.received = Received
+myProfile.invitations.sent = Sent
+myProfile.invitations.cancel = Uninvite
+myProfile.invitations.accept = Accept the invitation
+myProfile.invitations.ignore = Ignore the invitation
+myProfile.invitations.date = Date of the invitation : 
+
+myProfile.invitations.dialog.cancel.title = Uninvite ?
+myProfile.invitations.dialog.cancel.message = Are you sure you want to cancel the invitation sent to
+myProfile.invitations.dialog.accept.title = Accept the invitation ?
+myProfile.invitations.dialog.accept.message = Are you sure you want to accept the invitation of
+myProfile.invitations.dialog.ignore.title = Ignore the invitation ?
+myProfile.invitations.dialog.ignore.message = Are you sure you want to ignore the invitation of
+
+myProfile.contacts.all = Display all...
