--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
@@ -100,3 +100,28 @@ myProfile.settings.Thesaurus = Activer le th\u00E9saurus
 myProfile.settings.DragDrop = Activer le glisser/d\u00E9poser
 myProfile.settings.WebdavEditing = Activer l'\u00E9dition en ligne
 myProfile.settings.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas impos\u00E9
+
+myProfile.tab.profile = Mon profil
+myProfile.tab.settings = Mes pr\u00E9f\u00E9rences
+myProfile.tab.invitations = Mes invitations
+
+myProfile.invitations.received = Re\u00E7ues
+myProfile.invitations.sent = Envoy\u00E9es
+myProfile.invitations.cancel = Annuler l'invitation
+myProfile.invitations.accept = Accepter l'invitation
+myProfile.invitations.ignore = Ignorer l'invitation
+myProfile.invitations.date = Date de l'invitation : 
+
+myProfile.invitations.outbox.empty = Vous n'avez pas d'invitation en attente.
+myProfile.invitations.inbox.empty = Vous n'avez pas re\u00e7u d'invitation.
+
+myProfile.invitations.dialog.cancel.title = Annuler l'invitation ?
+myProfile.invitations.dialog.cancel.message = Etes-vous s\u00fbr(e) de vouloir annuler l'invitation envoy\u00E9e \u00e0
+myProfile.invitations.dialog.accept.title = Accepter l'invitation ?
+myProfile.invitations.dialog.accept.message = Etes-vous s\u00fbr(e) de vouloir accepter l'invitation de
+myProfile.invitations.dialog.ignore.title = Ignorer l'invitation ?
+myProfile.invitations.dialog.ignore.message = Etes-vous s\u00fbr(e) de vouloir ignorer l'invitation de
+
+myProfile.contacts.all = Tout afficher...
+
+myContactProfile.tab.profile = Profil
