--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -280,3 +280,6 @@ GML.user.type.D = Domain-Administrator
 GML.user.type.K = Administrator des Klassierungsplanes
 GML.user.type.U = Ben&uuml;tzer
 GML.user.type.G = Gast
+
+GML.notification.subject = Subject
+GML.notification.message = Message
