--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -280,3 +280,11 @@ GML.user.type.D = Domain manager
 GML.user.type.K = Classification scheme manager
 GML.user.type.U = User
 GML.user.type.G = Guest
+
+GML.notification.send = Envoyer un message
+GML.notification.subject = Subject
+GML.notification.message = Message
+
+GML.user.online = Online
+GML.user.online.for = Online for
+GML.user.offline = Offline
