--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -285,3 +285,11 @@ GML.user.type.D = Gestionnaire de domaine
 GML.user.type.K = Gestionnaire du Plan de Classement
 GML.user.type.U = Utilisateur
 GML.user.type.G = Invit\u00E9
+
+GML.notification.send = Envoyer un message
+GML.notification.subject = Sujet
+GML.notification.message = Message
+
+GML.user.online = Connect\u00E9(e)
+GML.user.online.for = Connect\u00E9(e) depuis
+GML.user.offline = D\u00E9connect\u00E9(e)
