first integration step of feature #1493

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
@@ -100,3 +100,7 @@ myProfile.settings.Thesaurus = Activer le th\u00E9saurus
 myProfile.settings.DragDrop = Activer le glisser/d\u00E9poser
 myProfile.settings.WebdavEditing = Activer l'\u00E9dition en ligne
 myProfile.settings.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas impos\u00E9
+
+myProfile.tab.profile = Mon profil
+myProfile.tab.settings = Mes préférences
+myProfile.tab.invitations = Mes invitations
