closing feature #1494 and #1495 Fixing some test cases too...

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -1,54 +1,31 @@
-#Les droit
-A=GML.administrateur
-D=GML.domainManager
-K=GML.kmmanager
-U=GML.user
-G=GML.guest
-
 #Connexion
 directory.connected=Connect\u00E9 depuis
 
 #Profil
-profil.wall=Mur
-profil.infos=Infos
-profil.publications=Publications
-profil.events=Ev\u00E8nements
-profil.photos=Photos
-profil.links=Liens
+newsFeed.scope.display = Display : 
+newsFeed.scope.all = All
+newsFeed.scope.publication = Publications
+newsFeed.scope.event = Events
+newsFeed.scope.photo = Images
+newsFeed.scope.relationship = Relationship
+newsFeed.scope.status = Status
 
-profil.elements_per_page.ALL=15
-profil.elements_per_page.EVENT=15
-profil.elements_per_page.PUBLICATION=15
-profil.elements_per_page.PHOTO=15
-
-profil.actions.changePhoto=Changer ma photo
-profil.actions.changeStatus=Changer mon statut
-profil.actions.changeInfos=Changer mes infos
+profil.actions.changePhoto=Change my picture
+profil.actions.changeStatus=Change my status
 
 profil.icon.private.event=Ev\u00E9nement priv\u00E9
-profil.icon.public.event=Ev\u00E9nement public
-profil.icon.new.pub=Publication cr\u00E9\u00E9e
-profil.icon.update.pub=Publication modifi\u00E9e
-profil.icon.staus=Statut
 
-profil.relationShip.suffix=a ajout\u00E9
-profil.relationShip.prefix=\u00E0 son r\u00E9seau
+newsFeed.getNext = Older informations
+newsFeed.inProgress = Loading in progress
 
-profil.status.suffix=a mis \u00E0 jour son statut
-
-profil.getNext=Voir plus
-
-newsFeed.newsFeed=Fil d'informations
-newsFeed.relations=Relations
-newsFeed.contacts=Mes contacts
-newsFeed.directory=Annuaire
-
-newsFeed.publication.apdated.true=a modifi\u00E9 la publication
-newsFeed.publication.apdated.false=a publi\u00E9 la publication
-newsFeed.photo.apdated.true=a modifi\u00E9 la photo
-newsFeed.photo.apdated.false=a publi\u00E9 la photo
-newsFeed.event.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
-newsFeed.lastevent.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
+newsFeed.publication.updated.true=have updated the publication
+newsFeed.publication.updated.false=have created the publication
+newsFeed.photo.updated.true=have updated the image
+newsFeed.photo.updated.false=have created the image
+newsFeed.event.label=will participate to the event 
+newsFeed.lastevent.label= have participated to the event
+newsFeed.status.suffix=have changed his status 
+newsFeed.relationShip.label = have added * to his network at  
 
 myProfile.UserRights = Rights
 myProfile.OldPassword = Old password
@@ -77,9 +54,11 @@ myProfile.settings.DragDrop = Enable drag n' drop
 myProfile.settings.WebdavEditing = Enable online edition
 myProfile.settings.ChangeLookAlert = The selected look will only be applied to spaces with no set look
 
-myProfile.tab.profile = My profile
-myProfile.tab.settings = My settings
-myProfile.tab.invitations = My invitations
+myProfile.tab.feed = News feed
+myProfile.tab.wall = Wall
+myProfile.tab.profile = Profile
+myProfile.tab.settings = Settings
+myProfile.tab.invitations = Invitations
 
 myProfile.invitations.received = Received
 myProfile.invitations.sent = Sent
@@ -87,6 +66,9 @@ myProfile.invitations.cancel = Uninvite
 myProfile.invitations.accept = Accept the invitation
 myProfile.invitations.ignore = Ignore the invitation
 myProfile.invitations.date = Date of the invitation : 
+
+myProfile.invitations.outbox.empty = You have no pending invitation
+myProfile.invitations.inbox.empty = You do not receive an invitation
 
 myProfile.invitations.dialog.cancel.title = Uninvite ?
 myProfile.invitations.dialog.cancel.message = Are you sure you want to cancel the invitation sent to
@@ -99,4 +81,5 @@ myProfile.contacts = contacts
 myProfile.contacts.all = Display all...
 
 myContactProfile.tab.profile = Profile
+myContactProfile.tab.wall = Wall
 myContactProfile.contacts.common = common contacts
