--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
@@ -1,54 +1,31 @@
-#Les droit
-A=GML.administrateur
-D=GML.domainManager
-K=GML.kmmanager
-U=GML.user
-G=GML.guest
-
 #Connexion
 directory.connected=Connect\u00E9 depuis
 
 #Profil
-profil.wall=Mur
-profil.infos=Infos
-profil.publications=Publications
-profil.events=Ev\u00E8nements
-profil.photos=Photos
-profil.links=Liens
-
-profil.elements_per_page.ALL=15
-profil.elements_per_page.EVENT=15
-profil.elements_per_page.PUBLICATION=15
-profil.elements_per_page.PHOTO=15
+newsFeed.scope.display = Afficher : 
+newsFeed.scope.all = Tous
+newsFeed.scope.publication = Publications
+newsFeed.scope.event = Ev\u00E8nements
+newsFeed.scope.photo = Images
+newsFeed.scope.relationship = Relations
+newsFeed.scope.status = Statuts
 
 profil.actions.changePhoto=Changer ma photo
 profil.actions.changeStatus=Changer mon statut
-profil.actions.changeInfos=Changer mes infos
 
 profil.icon.private.event=Ev\u00E9nement priv\u00E9
-profil.icon.public.event=Ev\u00E9nement public
-profil.icon.new.pub=Publication cr\u00E9\u00E9e
-profil.icon.update.pub=Publication modifi\u00E9e
-profil.icon.staus=Statut
 
-profil.relationShip.suffix=a ajout\u00E9
-profil.relationShip.prefix=\u00E0 son r\u00E9seau
+newsFeed.getNext = Informations plus anciennes
+newsFeed.inProgress = Chargement en cours
 
-profil.status.suffix=a mis \u00E0 jour son statut
-
-profil.getNext=Voir plus
-
-newsFeed.newsFeed=Fil d'informations
-newsFeed.relations=Relations
-newsFeed.contacts=Mes contacts
-newsFeed.directory=Annuaire
-
-newsFeed.publication.apdated.true=a modifi\u00E9 la publication
-newsFeed.publication.apdated.false=a publi\u00E9 la publication
-newsFeed.photo.apdated.true=a modifi\u00E9 la photo
-newsFeed.photo.apdated.false=a publi\u00E9 la photo
-newsFeed.event.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
-newsFeed.lastevent.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
+newsFeed.publication.updated.true=a modifi\u00E9 la publication
+newsFeed.publication.updated.false=a cr\u00E9\u00E9 la publication
+newsFeed.photo.updated.true=a modifi\u00E9 l'image
+newsFeed.photo.updated.false=a publi\u00E9 l'image
+newsFeed.event.label=participera \u00E0 l'\u00E9v\u00E9nement
+newsFeed.lastevent.label= a particip\u00E9 \u00E0 l'\u00E9v\u00E9nement
+newsFeed.status.suffix=a mis \u00E0 jour son statut \u00E0 
+newsFeed.relationShip.label = a ajout\u00E9 * \u00E0 son r\u00E9seau \u00E0 
 
 myProfile.UserRights = Droits
 myProfile.OldPassword = Ancien mot de passe
@@ -77,9 +54,11 @@ myProfile.settings.DragDrop = Activer le glisser/d\u00E9poser
 myProfile.settings.WebdavEditing = Activer l'\u00E9dition en ligne
 myProfile.settings.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas impos\u00E9
 
-myProfile.tab.profile = Mon profil
-myProfile.tab.settings = Mes pr\u00E9f\u00E9rences
-myProfile.tab.invitations = Mes invitations
+myProfile.tab.feed = Fil d'informations
+myProfile.tab.wall = Mur
+myProfile.tab.profile = Profil
+myProfile.tab.settings = Pr\u00E9f\u00E9rences
+myProfile.tab.invitations = Invitations
 
 myProfile.invitations.received = Re\u00E7ues
 myProfile.invitations.sent = Envoy\u00E9es
@@ -102,4 +81,5 @@ myProfile.contacts = contacts
 myProfile.contacts.all = Tout afficher...
 
 myContactProfile.tab.profile = Profil
+myContactProfile.tab.wall = Mur
 myContactProfile.contacts.common = contacts communs
