--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_fr.properties
@@ -27,35 +27,37 @@ fileSharing.alt = Texte de la balise <alt>
 fileSharing.tickets = Mes tickets
 fileSharing.ticket = Ticket
 fileSharing.addTicket = Ajouter un ticket
-fileSharing.deleteTickets = Supprimer tous les tickets s\u00E9lectionn\u00E9s
+fileSharing.deleteTickets = Supprimer tous les tickets s\u00e9lectionn\u00e9s
 fileSharing.interneLink = Lien interne
-fileSharing.endDate = Date de fin de validit\u00E9
-fileSharing.nbAccess = Nombre d'acc\u00E8s
-fileSharing.nbAccessMax = Nombre d'acc\u00E8s maximun
-fileSharing.operation = Op\u00E9rations
-fileSharing.updateTicket = Mettre \u00E0 jour un ticket
-fileSharing.createTicket = Cr\u00E9er un ticket
+fileSharing.endDate = Date de fin de validit\u00e9
+fileSharing.nbAccess = Nombre d'acc\u00e8s
+fileSharing.nbAccessMax = Nombre d'acc\u00e8s maximun
+fileSharing.operation = Op\u00e9rations
+fileSharing.updateTicket = Mettre \u00e0 jour un ticket
+fileSharing.createTicket = Cr\u00e9er un ticket
 fileSharing.deleteTicket = Supprimer un ticket
 fileSharing.fileId = Id du fichier
 fileSharing.componentId = Id du composant
 fileSharing.versioning = Versioning
-fileSharing.creationDate = Cr\u00E9\u00E9 le
+fileSharing.creationDate = Cr\u00e9\u00e9 le
 fileSharing.by = par
-fileSharing.updateDate = modifi\u00E9 le
-fileSharing.endDate = Date de fin de validit\u00E9
-fileSharing.nbAccessMax = Nombre d'acc\u00E8s maximum
-fileSharing.nbAccess = Nombre d'acc\u00E8s
-fileSharing.keyFile = cl\u00E9
+fileSharing.updateDate = modifi\u00e9 le
+fileSharing.endDate = Date de fin de validit\u00e9
+fileSharing.nbAccessMax = Nombre d'acc\u00e8s maximum
+fileSharing.nbAccess = Nombre d'acc\u00e8s
+fileSharing.keyFile = cl\u00e9
 fileSharing.confirmTicket = Votre ticket
-fileSharing.confirmDeleteTicket = Etes vous s\u00FBr de vouloir supprimer le ticket 
-fileSharing.downloadDate = t\u00E9l\u00E9charg\u00E9 le
+fileSharing.confirmDeleteTicket = Etes vous s\u00fbr de vouloir supprimer le ticket
+fileSharing.downloadDate = t\u00e9l\u00e9charg\u00e9 le
 fileSharing.IP = IP
-fileSharing.url = url d'acc\u00E8s :
-fileSharing.expiredTicket = Le ticket demand\u00E9 a expir\u00E9
-fileSharing.nameFile = Nom du ficher 
+fileSharing.url = url d'acc\u00e8s :
+fileSharing.expiredTicket = Le ticket demand\u00e9 a expir\u00e9
+fileSharing.nameFile = Nom du ficher
 fileSharing.sizeFile = Taille
-fileSharing.downloadLink = lien de t\u00E9l\u00E9chargement
+fileSharing.downloadLink = Lien vers le fichier \u00e0 t\u00e9l\u00e9charger
 fileSharing.ticketNotValid = Ce ticket n'est plus valide
 fileSharing.afficherCalendrier = afficher le calendrier
-fileSharing.maxValue = doit \u00EAtre compris entre 1 et 100
+fileSharing.maxValue = doit \u00eatre compris entre 1 et 100
+fileSharing.shareFile = a choisi de partager le fichier&nbsp;:
+fileSharing.downloadFileHelp = Pour t\u00e9l\u00e9charger directement le fichier, <br/>faites un <b>clic droit > Enregistrer la cible sous ... </b>
 
