Adding multilang messages

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -1,5 +1,5 @@
 #Connexion
-directory.connected=Connect\u00E9 depuis
+directory.connected=Connect\u00e9 depuis
 
 #Profil
 newsFeed.scope.display = Display : 
@@ -13,7 +13,7 @@ newsFeed.scope.status = Status
 profil.actions.changePhoto=Change my picture
 profil.actions.changeStatus=Change my status
 
-profil.icon.private.event=Ev\u00E9nement priv\u00E9
+profil.icon.private.event=Ev\u00e9nement priv\u00e9
 
 newsFeed.getNext = Older informations
 newsFeed.inProgress = Loading in progress
@@ -53,6 +53,11 @@ myProfile.settings.Thesaurus = Enable thesaurus
 myProfile.settings.DragDrop = Enable drag n' drop
 myProfile.settings.WebdavEditing = Enable online edition
 myProfile.settings.ChangeLookAlert = The selected look will only be applied to spaces with no set look
+myProfile.settings.DEFAULT=Use the look style
+myProfile.settings.DISABLE=Display the All space tab only
+myProfile.settings.ALL=Display all the spaces
+myProfile.settings.BOOKMARKS=Display the bookmarks
+myProfile.settings.menuDisplay=Display style of the left menu
 
 myProfile.tab.feed = News feed
 myProfile.tab.wall = Wall
