Fixing some display bug in myContactProfile on JBoss 6

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -88,3 +88,7 @@ myProfile.contacts.all = Display all...
 myContactProfile.tab.profile = Profile
 myContactProfile.tab.wall = Wall
 myContactProfile.contacts.common = common contacts
+
+
+profil.subnav.display=Display\:
+profil.subnav.identity=Identity
