closing feature #1615 Changing labels and order of parameter values.

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -53,11 +53,11 @@ myProfile.settings.Thesaurus = Enable thesaurus
 myProfile.settings.DragDrop = Enable drag n' drop
 myProfile.settings.WebdavEditing = Enable online edition
 myProfile.settings.ChangeLookAlert = The selected look will only be applied to spaces with no set look
-myProfile.settings.DEFAULT=Use the look style
-myProfile.settings.DISABLE=Display the All space tab only
-myProfile.settings.ALL=Display all the spaces
-myProfile.settings.BOOKMARKS=Display the bookmarks
-myProfile.settings.menuDisplay=Display style of the left menu
+myProfile.settings.DEFAULT=Use by default
+myProfile.settings.DISABLE=Do not use
+myProfile.settings.ALL=Use "All spaces" tab by default
+myProfile.settings.BOOKMARKS=Use "Favorites" tab by default
+myProfile.settings.menuDisplay=Favorite spaces
 
 myProfile.tab.feed = News feed
 myProfile.tab.wall = Wall
